--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -283,6 +283,88 @@
 		})
 	});
 
+	<!-- アイテム有効化 -->
+	$("#item_flg_1").click(function() {
+	var flg = $("#item_flg_1").text();
+	console.log(flg);
+	if(flg == 'ON'){
+		$("#item_flg_1").html('OFF');
+	}else{
+		$("#item_flg_1").html('ON');
+	}
+	});
+
+	$("#item_flg_2").click(function() {
+		var flg = $("#item_flg_2").text();
+		console.log(flg);
+		if(flg == 'ON'){
+			$("#item_flg_2").html('OFF');
+		}else{
+			$("#item_flg_2").html('ON');
+		}
+		});
+
+	$("#item_flg_3").click(function() {
+		var flg = $("#item_flg_3").text();
+		console.log(flg);
+		if(flg == 'ON'){
+			$("#item_flg_3").html('OFF');
+		}else{
+			$("#item_flg_3").html('ON');
+		}
+		});
+
+	$("#item_flg_4").click(function() {
+		var flg = $("#item_flg_4").text();
+		console.log(flg);
+		if(flg == 'ON'){
+			$("#item_flg_4").html('OFF');
+		}else{
+			$("#item_flg_4").html('ON');
+		}
+		});
+
+	$("#item_flg_5").click(function() {
+		var flg = $("#item_flg_5").text();
+		console.log(flg);
+		if(flg == 'ON'){
+			$("#item_flg_5").html('OFF');
+		}else{
+			$("#item_flg_5").html('ON');
+		}
+		});
+
+	$("#item_flg_6").click(function() {
+		var flg = $("#item_flg_6").text();
+		console.log(flg);
+		if(flg == 'ON'){
+			$("#item_flg_6").html('OFF');
+		}else{
+			$("#item_flg_6").html('ON');
+		}
+		});
+
+	$("#item_flg_7").click(function() {
+		var flg = $("#item_flg_7").text();
+		console.log(flg);
+		if(flg == 'ON'){
+			$("#item_flg_7").html('OFF');
+		}else{
+			$("#item_flg_7").html('ON');
+		}
+		});
+
+	$("#item_flg_8").click(function() {
+		var flg = $("#item_flg_8").text();
+		console.log(flg);
+		if(flg == 'ON'){
+			$("#item_flg_8").html('OFF');
+		}else{
+			$("#item_flg_8").html('ON');
+		}
+		});
+
+
 
 
 	<!-- クッキー背景ループ -->
