サーバー側処理追加

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -21,7 +21,7 @@
 		</ul>
 
 		<!-- 画面左側の表示部分 -->
-		<div id="total_cookie_count">10</div>
+		<div id="total_cookie_count"></div>
 		<div id="cookie_count"></div>
 		<div id="big_cookie"></div>
 		<div id="panel" style="position: absolute; left: 32px; top: 0px;"></div>
@@ -48,9 +48,9 @@
 		<div id="item_name_1" style="left: 800px; top: 125px;">
 			<p></p>
 		</div>
-		<div class="item_flg"  id="item_flg_1"
+		<div class="item_flg"  name="item1" id="item_flg_1"
 			style="position: absolute; left: 900px; top: 135px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 		<div class="item_icon"  id="item_icon_2"></div>
@@ -61,9 +61,9 @@
 		<div id="item_name_2" style="left: 800px; top: 190px;">
 			<p></p>
 		</div>
-		<div class="item_flg" id="item_flg_2"
+		<div class="item_flg" name="item2" id="item_flg_2"
 			style="position: absolute; left: 900px; top: 195px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 
@@ -75,9 +75,9 @@
 		<div id="item_name_3" style="left: 800px; top: 255px;">
 			<p></p>
 		</div>
-		<div class="item_flg" id="item_flg_3"
+		<div class="item_flg" name="item3" id="item_flg_3"
 			style="position: absolute; left: 900px; top: 255px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 
@@ -89,9 +89,9 @@
 		<div id="item_name_4" style="left: 800px; top: 320px;">
 			<p></p>
 		</div>
-		<div class="item_flg" id="item_flg_4"
+		<div class="item_flg" name="item4" id="item_flg_4"
 			style="position: absolute; left: 900px; top: 320px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 
@@ -103,9 +103,9 @@
 		<div id="item_name_5" style="left: 800px; top: 385px;">
 			<p></p>
 		</div>
-		<div class="item_flg" id="item_flg_5"
+		<div class="item_flg" name="item5" id="item_flg_5"
 			style="position: absolute; left: 900px; top: 385px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 
@@ -117,9 +117,9 @@
 		<div id="item_name_6" style="left: 800px; top: 445px;">
 			<p></p>
 		</div>
-		<div class="item_flg" id="item_flg_6"
+		<div class="item_flg" name="item6" id="item_flg_6"
 			style="position: absolute; left: 900px; top: 450px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 
@@ -131,9 +131,9 @@
 		<div id="item_name_7" style="left: 800px; top: 510px;">
 			<p></p>
 		</div>
-		<div class="item_flg" id="item_flg_7"
+		<div class="item_flg" name="item7" id="item_flg_7"
 			style="position: absolute; left: 900px; top: 515px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 
@@ -145,9 +145,9 @@
 		<div id="item_name_8" style="left: 800px; top: 575px;">
 			<p></p>
 		</div>
-		<div class="item_flg" id="item_flg_8"
+		<div class="item_flg" name="item8" id="item_flg_8"
 			style="position: absolute; left: 900px; top: 575px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>ON</p>
+			<p>OFF</p>
 		</div>
 
 	</div>
