--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,146 +16,43 @@
 	<div class="no_scroll">
 		<!-- スライド -->
 		<ul class="slider">
-			<li id="slide_1"></li>
-			<li id="slide_2"></li>
+			<li id="slide_1"><img src="/image//image/cookieShower2.png"></li>
+			<li id="slide_2"><img src="/image//image/cookieShower2.png"></li>
 		</ul>
 
 		<!-- 画面左側の表示部分 -->
 		<div id="total_cookie_count"></div>
 		<div id="cookie_count"></div>
-		<div id="big_cookie"></div>
-		<div id="panel" style="position: absolute; left: 32px; top: 0px;"></div>
-		<div id="panel_2" style="position: absolute; left: 550px; top: 0px;"></div>
+		<div id="big_cookie">
+			<img src="/image/perfectCookie.png">
+		</div>
+		<div id="panel" style="position: absolute; left: 32px; top: 0px;">
+			<img src="/image//image/panelVertical1.png">
+		</div>
+		<div id="panel_2" style="position: absolute; left: 550px; top: 0px;">
+			<img src="/image//image/panelVertical1.png">
+		</div>
 
 
 
 
 
 		<!-- 画面右側の表示部分 -->
-		<div id="panel_3" style="position: absolute; left: 684px; top: 0px;"></div>
-		<div id="panel_4" style="position: absolute; left: 1000px; top: 0px;"></div>
-
-
-
-		<div id="item_list"></div>
-		<div id="item_list_2"></div>
-
-		<div class="item_icon" id="item_icon_1"></div>
-		<div id="buy_item_count_1"
-			style="position: absolute; left: 950px; top: 145px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
+		<div id="panel_3" style="position: absolute; left: 684px; top: 0px;">
+			<img src="/image//image/panelVertical1.png">
 		</div>
-		<div id="item_name_1" style="left: 800px; top: 125px;">
-			<p></p>
-		</div>
-		<div class="item_flg"  name="item1" id="item_flg_1"
-			style="position: absolute; left: 900px; top: 135px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
-		</div>
-
-		<div class="item_icon"  id="item_icon_2"></div>
-		<div id="buy_item_count_2"
-			style="position: absolute; left: 950px; top: 210px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
-		</div>
-		<div id="item_name_2" style="left: 800px; top: 190px;">
-			<p></p>
-		</div>
-		<div class="item_flg" name="item2" id="item_flg_2"
-			style="position: absolute; left: 900px; top: 195px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
+		<div id="panel_4" style="position: absolute; left: 1000px; top: 0px;">
+			<img src="/image//image/panelVertical1.png">
 		</div>
 
 
-		<div class="item_icon"  id="item_icon_3"></div>
-		<div id="buy_item_count_3"
-			style="position: absolute; left: 950px; top: 275px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
-		</div>
-		<div id="item_name_3" style="left: 800px; top: 255px;">
-			<p></p>
-		</div>
-		<div class="item_flg" name="item3" id="item_flg_3"
-			style="position: absolute; left: 900px; top: 255px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
-		</div>
 
-
-		<div class="item_icon"  id="item_icon_4"></div>
-		<div id="buy_item_count_4"
-			style="position: absolute; left: 950px; top: 340px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
+		<div id="item_list">
+			<img src="/image/storeTile.jpg">
 		</div>
-		<div id="item_name_4" style="left: 800px; top: 320px;">
-			<p></p>
+		<div id="item_list_2">
+			<img src="/image/storeTile.jpg">
 		</div>
-		<div class="item_flg" name="item4" id="item_flg_4"
-			style="position: absolute; left: 900px; top: 320px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
-		</div>
-
-
-		<div class="item_icon"  id="item_icon_5"></div>
-		<div id="buy_item_count_5"
-			style="position: absolute; left: 950px; top: 405px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
-		</div>
-		<div id="item_name_5" style="left: 800px; top: 385px;">
-			<p></p>
-		</div>
-		<div class="item_flg" name="item5" id="item_flg_5"
-			style="position: absolute; left: 900px; top: 385px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
-		</div>
-
-
-		<div class="item_icon"  id="item_icon_6"></div>
-		<div id="buy_item_count_6"
-			style="position: absolute; left: 950px; top: 465px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
-		</div>
-		<div id="item_name_6" style="left: 800px; top: 445px;">
-			<p></p>
-		</div>
-		<div class="item_flg" name="item6" id="item_flg_6"
-			style="position: absolute; left: 900px; top: 450px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
-		</div>
-
-
-		<div class="item_icon"  id="item_icon_7"></div>
-		<div id="buy_item_count_7"
-			style="position: absolute; left: 950px; top: 530px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
-		</div>
-		<div id="item_name_7" style="left: 800px; top: 510px;">
-			<p></p>
-		</div>
-		<div class="item_flg" name="item7" id="item_flg_7"
-			style="position: absolute; left: 900px; top: 515px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
-		</div>
-
-
-		<div class="item_icon"  id="item_icon_8"></div>
-		<div id="buy_item_count_8"
-			style="position: absolute; left: 950px; top: 595px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; pointer-events: none;">
-			<p></p>
-		</div>
-		<div id="item_name_8" style="left: 800px; top: 575px;">
-			<p></p>
-		</div>
-		<div class="item_flg" name="item8" id="item_flg_8"
-			style="position: absolute; left: 900px; top: 575px; -webkit-text-stroke: 1px #000; font-size: 170%; font-weight: bolder; cursor:pointer;">
-			<p>OFF</p>
-		</div>
-
 	</div>
 </body>
 </html>
-
-
-
-
-
-
