指摘一部対応

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,8 +18,8 @@
 	<div class="no_scroll">
 		<!-- スライド -->
 		<ul class="slider">
-			<li id="slide_1"><img src="/image//image/cookieShower2.png"></li>
-			<li id="slide_2"><img src="/image//image/cookieShower2.png"></li>
+			<li id="slide_1"><img src="/image/cookieShower2.png"></li>
+			<li id="slide_2"><img src="/image/cookieShower2.png"></li>
 		</ul>
 
 		<!-- 画面左側の表示部分 -->
@@ -29,10 +29,10 @@
 			<img src="/image/perfectCookie.png">
 		</div>
 		<div id="panel" style="position: absolute; left: 32px; top: 0px;">
-			<img src="/image//image/panelVertical1.png">
+			<img src="/image/panelVertical1.png">
 		</div>
 		<div id="panel_2" style="position: absolute; left: 550px; top: 0px;">
-			<img src="/image//image/panelVertical1.png">
+			<img src="/image/panelVertical1.png">
 		</div>
 
 
@@ -42,10 +42,10 @@
 		<!-- 画面右側の表示部分 -->
 
 		<div id="panel_3" style="position: absolute; left: 684px; top: 0px;">
-			<img src="/image//image/panelVertical1.png">
+			<img src="/image/panelVertical1.png">
 		</div>
 		<div id="panel_4" style="position: absolute; left: 1000px; top: 0px;">
-			<img src="/image//image/panelVertical1.png">
+			<img src="/image/panelVertical1.png">
 		</div>
 
 
