--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,8 +4,8 @@
 <head>
 <meta charset="UTF-8" />
 <link href="css/slick.css" rel="stylesheet" type="text/css">
-<link href="css/cookieclickerstyle.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="css/cookieclickerstyle.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="js/jquery-3.3.1.min.js"></script>
 <script type="text/javascript" src="js/slick.min.js"></script>
 <script type="text/javascript" src="js/jquery.cookie.js"></script>
@@ -23,9 +23,10 @@
 			<li id="slide_2"><img src="/image/cookieShower2.png"></li>
 		</ul>
 
+
 		<!-- 画面左側の表示部分 -->
 		<div id="total_cookie_count"></div>
-		<div id="cookie_count"></div>
+		<div id="cookie_count" style="position: absolute; left:220px; top: 100px;"></div>
 		<div id="big_cookie">
 			<img src="/image/perfectCookie.png">
 		</div>
